@@ -30,6 +30,7 @@ $ -> Language fix or change
 13-Arp-2010 Mark Dexter
 # Fixed category edit so that change parent category works again
 # Fixed category manager so that Empty Trash toolbar button shows
+# Refactored JTableNested move method to eliminate duplicate code
 
 13-Apr-2010 Jean-Marie Simonet
 # Fixed some Archive, Trash, Empty trash bugs + Strings.
